--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,13 @@ h1, h2, h3, h4, h5, h6 {
 .loading-names .last-name {
     display: block;
     font-size: 4.5rem;
-    color: #7a7b6f;
+    color: #8a8b7e;
     line-height: 1.1;
     margin-bottom: 1.8rem;
     font-weight: 300;
-    opacity: 0.85;
+    opacity: 0.75;
+    -webkit-text-stroke: 0.3px rgba(138, 139, 126, 0.3);
+    transform: scaleX(0.98);
 }
 
 .loading-ampersand {
@@ -226,9 +228,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 5rem;
     display: block;
     line-height: 1;
-    color: #7a7b6f;
+    color: #8a8b7e;
     font-weight: 300;
-    opacity: 0.85;
+    opacity: 0.75;
+    -webkit-text-stroke: 0.3px rgba(138, 139, 126, 0.3);
+    transform: scaleX(0.98);
 }
 
 .hero-ampersand {
@@ -251,7 +255,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Cormorant Garamond', serif;
     font-size: 1.3rem;
     color: #6d6e62;
-    font-style: italic;
+    font-style: normal;
     margin-bottom: 2rem;
     font-weight: 300;
     letter-spacing: 0.5px;
@@ -269,7 +273,7 @@ h1, h2, h3, h4, h5, h6 {
 .hero-location {
     font-family: 'Cormorant Garamond', serif;
     font-size: 1rem;
-    font-style: italic;
+    font-style: normal;
     margin-bottom: 5rem;
     color: #8a8b7e;
     font-weight: 300;
@@ -738,8 +742,8 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-palm svg {
-        width: 35px;
-        height: 52px;
+        width: 45px;
+        height: 58px;
     }
     
     .hero-invite {
@@ -852,8 +856,8 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-palm svg {
-        width: 30px;
-        height: 45px;
+        width: 38px;
+        height: 50px;
     }
     
     .hero-invite {
