--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.5rem;
     color: #5B6B8C;
     margin-bottom: 6rem;
-    font-style: italic;
+    font-style: normal;
     font-weight: 300;
     max-width: 600px;
     margin-left: auto;
