--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Hello Paris', cursive;
+    font-family: 'Stay Classy', cursive;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 2px;
