--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Stay Classy', cursive;
-    font-weight: 400;
+    font-family: 'The Wedding Script', cursive;
+    font-weight: 300;
     font-style: normal;
     letter-spacing: 2px;
 }
@@ -185,9 +185,12 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 5rem;
     display: block;
     line-height: 1;
-    color: #2E3B5D;
-    font-weight: 400;
+    color: #5B6B8C;
+    font-weight: 300;
     letter-spacing: 2px;
+    opacity: 0.85;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .hero-ampersand {
