--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Tangerine', cursive;
+    font-family: 'Great Vibes', cursive;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 2px;
@@ -185,10 +185,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 5rem;
     display: block;
     line-height: 1.1;
-    color: #5B6B8C;
+    color: #2E3B5D;
     font-weight: 400;
     letter-spacing: 2px;
-    opacity: 0.9;
+    opacity: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
