--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,9 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
     letter-spacing: 2px;
     opacity: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
 }
 
 .hero-ampersand {
