--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Playfair Display', serif;
     font-weight: 300;
-    font-style: normal;
+    font-style: italic;
     letter-spacing: 2px;
 }
 
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
     color: #2E3B5D;
     font-weight: 300;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     opacity: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
